# lang2action

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  eval_sim.json  perception_report.json  pyproject.toml
src/lang2action/: __init__.py  cli.py  config.py
src/lang2action/action/: __init__.py  base.py
src/lang2action/agent/: __init__.py  graph.py  llm.py  robot.py  schema.py
src/lang2action/eval/: __init__.py  cases.py  perception.py  runner.py
src/lang2action/mcp_server/: __main__.py  server.py
src/lang2action/perception/: __init__.py  base.py  factory.py  models.py  queries.py  sgg_http.py  sim_backend.py  spatial.py
src/lang2action/sim/: __init__.py  camera.py  executor.py  scene_gen.py  world.py
tests/: test_agent.py  test_agent_sim.py  test_cli.py  test_config.py  test_eval.py  test_mcp_server.py  test_models.py  test_perception_eval.py  test_queries.py  test_sgg_backend.py  test_sim.py  test_spatial.py
