[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lang2action"
version = "0.1.0"
description = "Language-grounded tabletop manipulation: NL command -> scene graph (MCP) -> LangGraph planning -> pick-and-place in PyBullet"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Romina" }]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "mcp>=1.0",
    "pybullet>=3.2.6",
    "numpy>=1.26",
    "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
lang2action = "lang2action.cli:app"
lang2action-mcp = "lang2action.mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
